# weston-extra-dip

./: .clang-tidy  README.md  capabilities.cpp  compositor-management.cpp  compositor-manager.cpp  gamma-control.cpp  key-modifier-binds.cpp  layer-shell.cpp  layered-screenshooter.cpp  layered-screenshot.cpp  meson.build  weston-extra-dip-capabilities-api.h
protocols/: meson.build  wldip-compositor-manager.xml  wldip-layered-screenshooter.xml
schemas/: Management.fbs  Screenshot.fbs  meson.build
